--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document21</title>
+    <title>Document 010</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </header>
-    <!-- section1 -->
+    
     <section class="container about">
         <div>
             <h1 class="about_title">Grow your subscription business</h1>
@@ -67,35 +67,57 @@
         </div>
     </section>
 
-    <!-- <section>   
+     <section class="container subscribe">
           <div>
-            <img src="./img/artist.png" alt="">
+            <img src="./img/artist.png" alt="artist">
           </div>
-          <div>
-            <h3 class="subscription_text">Subscription index</h3>
-            <div>
-              <button class="button button_email">Email</button>
-              <button class="button button_violet_two ">Try</button>
+        <div>
+            <h3 class="subscribe_title">Subscription index</h3>
+            <form>
+              <input class="input" type="email" placeholder="Email">
+              <button class="button button_violet">Try</button>
+            </form>
+        </div>
+    </section>
+
+    <section class="container plan">
+        <h2 class="plan_title">Get the right plan for future</h2>
+          <div class="plan_item">
+            <div class="item">
+              <p class="item_text">Starter</p>
+              <h3 class="item_title">Free</h3>
+              <ul>
+                <li class="item_li">1 Website</li>
+                <li class="item_li">5 GB Hosting</li>
+                <li class="item_li">Limited Support</li>
+               </ul>
+               <button class=" button button_item">Get Started</button>
+            </div>
+
+            <div class="item">
+              <p class="item_text">Premium</p>
+              <h3 class="item_title">$29<span class="item_title_span">/month</span></h3> 
+              <ul>
+                <li class="item_li">10 Website</li>
+                <li class="item_li">15 GB Hosting</li>
+                <li class="item_li">Premium Support</li>
+              </ul>
+               <button class="button button_item">Get Started</button>
+            </div>
+
+            <div class="item">
+              <p class="item_text">Enterprise</p>
+              <h3 class="item_title">$49<span class="item_title_span">/month</span></h3>
+              <ul>
+                <li class="item_li">Unlimited Website</li>
+                <li class="item_li">50 GB Hosting</li>
+                <li class="item_li">Premium Support</li>
+              </ul>
+               <button class=" button button_item">Get Started</button>
             </div>
           </div>
     </section>
 
-    <section>
-        <div class>
-        <h2>Get the right plan for future</h2>
-            <div>
-        <input type="text">   
-                  <p>Starter</p>
-                 <h2>Free</h2>
-                  <ul>
-                    <li>1 Website</li>
-                    <li>5 GB Hosting</li>
-                    <l
-              </div>
-            <div></div>
-            <div></div>
-        </div>
-    </section>  -->
     <footer class="footer">
         <div class="container footer_flex">
           <div>
